package com.compose.jetpackcompose.model

data class OrderReward(
    val reward: Reward,
    val count: Int
)